--- a/style.css
+++ b/style.css
@@ -633,6 +633,7 @@ form .btn2{
     }
     .headertext p{
         text-align: center;
+        margin-top: 30px;
         font-size: 30px;
     }
 
